# messenger_backend

./: .env.example  .env.production.example  .gitignore  AGENTS.md  API_USE_DOC.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  audit.toml  backend_roadmap.md  docker-compose.prod.yml  docker-compose.yml  phase05_endpoints.json  schema.sql
.antigravity/: skills.md
.cursor/rules/: backend-standards.mdc
.cursor/skills/realtime-logic-expert/: SKILL.md
.cursor/skills/rust-backend-architect/: SKILL.md
.cursor/skills/security-hardener/: SKILL.md
.cursor/skills/sqlx-query-validator/: SKILL.md
.github/workflows/: ci.yml
.sqlx/: query-0256f2a14474ac0bcd3f59fff7bfefa31f56adb17933c9a719f6970c1277e2f7.json  query-097c69f630cffd5b2e234c1c6813a9894702d68c1d038c06b8cb73c6d65a1851.json  query-0a8c7e935f3b98f1ddbc1d44850391de741fad15bc3ec857d8c53fb9b2bcd168.json  query-0ee4c30b615cc895b87d0a365be86c823ccde26d3b1925e73df59ff53abb5e69.json  query-1576665d2bd205a50b8d1a4858c1d85832857021a5f9d1731005f6fe52825a83.json  query-15c37c2352692bd708b918218135f9e926abe1549dfa4784f03ffebe1641d444.json  query-234da1ee441b2c938b61197d374daf4bbf62b30e82aa38265277da48477796e1.json  query-235b9acf0cf347f8833850bccb45424f419040cd28177ecbc8436bdedfa8929e.json  query-2ad5471b1cc8d220a9d2a971a24deb953974d9f709ef0ed3395d5fb8faff5c12.json  query-2caad2cf74a3126f70ff3a0235db11520387a21c02be350ad78da9ee93e8a347.json  query-2ed9a6a2cac6d3c261a8addf46f4a6a54a42a7ff5b33e2e3c65b171917f576f2.json  query-355fd2b5d3f622761d4d1aeaa7ea280c16f9f3b6cda7e7be68fbadec19471f08.json  query-36e829f155758a553f0e77e864d6a04ab79a6ea1ed3884b3112f092aed590cc5.json  query-417dd73bcd57f749fe016752d31b3ea1b7bf89c53a71b3cf1572bd020dbef28a.json  query-4a8d9a7c6ff0288bf473163262967891f5c9bca932e95e7fdae8545c3bad51a0.json  query-5c1518be08c494870197db2eed4cf1052253b68b381a81a042fc59c8bf95e2b3.json  query-5e92cd3865b050804215a5aa061ae3e9c4e9d6a5a88f50ee9112a6d1315d747a.json  query-60ecee55af9af153d4465ba9fe0c988a5132cc33205d54fed67df895f13b4489.json  query-6194ffec1894a66a1922b113f4a9048e69d8a07adbc2ff5b6ee0a05faacf98b8.json  query-6c3d5b4c9a3dd5a66c02f9c63157e15d3ff60cd1d8a3013ec6a8e11040444b74.json  query-6d74199fd5fb441a9e5b78ebbd582480b9c7153aae5554d17d51d5eb03531961.json  query-75f0ded6d56af22a56ad22e0b672ff5d4f9dcf305f6ba613382041a4301b42ea.json  query-776b8ccf7f034e2443c9ecad521bead904f562e74b24a3a71fbb02b126c70f53.json  query-77b6d3f3b88d84a2f092977c836b7f28e3de851f726106ec2872a7707c9ceb1f.json  query-77cdc2da4d4b06aa8517c18462490f2e95bf8aa5e24ac055b1910796ee84ad55.json  query-7ebac8cb00ce48201dc489a67fdf35fdc31795f91ca4133d9483cd568468beab.json  query-9bde31fd9e69e83d3d74bd6d7184af4f7250831266bece18fc98dd0b4d141600.json  query-9c39d8e19d8b034ac3398a1c39ce06e591adb08e6c3fee92adb685243df8796b.json  query-a25d769d618416fa1416b9e188b360e808c865a0a91a314feaf3f45545629246.json  query-a52104a17ba17ec899211e4cd9e9c087be633c5859f7b7f7d09e5ad1497e6e3c.json  query-a80ac72ea26add99547e330995dc6dc0164efa8cb2379bc514ad867f611b1f91.json  query-ada637250aae5b81f092020274a6ff9077a43833241fe663839d1dd8a73da939.json  query-b545936b145f729b468ffc997819cb3b2d04a129ad58c95f932af93027c422d1.json  query-b665b4e4081745573f2e5189ef3694a695e8aa13720267e2492b88dbfce17fde.json  query-c340f272666f80969456fdba79d26c145e22ca63d30cc65f5f1eacefa3ec2a8e.json  query-c7b1858fbce18d97155c413600202133799f03a3215403693eab464c814b69a0.json  query-cdfda20154d27e70bf67bd7b0db1a22915aa106595c298bbe6d0af5773ea684e.json  query-d49a1590e8001282ad05890b5ee3ec54c03cce6b6a867cab98d3d712d0e25829.json  query-ea5f8b042e694be3f22f551531dd8f4da3be24e3bc13674dce6efda7fe54c393.json  query-ecf9feedebaae643011e7124ac7bd2c3bef9105de9672ca22be1aab04d506c3c.json  (+1 more)
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs  routes.rs
crates/api/src/handlers/: mod.rs
crates/api/src/handlers/attachments/: dto.rs  handlers.rs  mod.rs
crates/api/src/handlers/auth/: dto.rs  mod.rs
crates/api/src/handlers/blocks/: dto.rs  handlers.rs
crates/api/src/handlers/calls/: mod.rs
crates/api/src/handlers/chats/: dto.rs  handlers.rs  mod.rs
crates/api/src/handlers/contacts/: dto.rs  handlers.rs
crates/api/src/handlers/groups/: dto.rs  handlers.rs  mod.rs
crates/api/src/handlers/keys/: dto.rs  handlers.rs  mod.rs
crates/api/src/handlers/stories/: dto.rs  handlers.rs  mod.rs
crates/api/src/handlers/users/: dto.rs  handlers.rs
crates/api/src/handlers/ws/: dto.rs  handlers.rs  mod.rs
crates/api/src/middleware/: auth.rs  logging.rs  mod.rs  security.rs
crates/api/src/services/: error.rs  jwt.rs  metrics.rs  mod.rs  otp.rs  push.rs  storage.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/call/: entities.rs  mod.rs  repository.rs  service.rs
crates/domain/src/chat/: entity.rs  mod.rs  notifications.rs  repository.rs
crates/domain/src/contact/: entity.rs  repository.rs  value_objects.rs
crates/domain/src/keys/: mod.rs
crates/domain/src/stories/: entity.rs  mod.rs  repository.rs
crates/domain/src/user/: entity.rs  repository.rs  (+1 more)
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/cache/: mod.rs  profile.rs  rate_limiter.rs
crates/infrastructure/src/repositories/: chat.rs  contact.rs  contact_tests.rs  keys.rs  mod.rs  stories.rs  user.rs  user_tests.rs
crates/infrastructure/src/repositories/call/: mod.rs  postgres.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  hash.rs  lib.rs  logging.rs
migrations/: 001_extensions_and_types.sql  002_users.sql  003_user_profiles.sql  004_user_keys.sql  005_one_time_prekeys.sql  006_user_sessions.sql  007_contacts.sql  008_user_blocks.sql  009_chats_and_settings.sql  010_participants_and_messages.sql  011_stories_notifications_audit.sql  012_remove_password_hash.sql  013_message_attachments_pending_upload.sql  014_message_read_function.sql  015_fix_v_chat_previews.sql  016_group_participant_management.sql  017_add_user_phone_hash.sql  018_performance_autovacuum.sql  019_webrtc_calls.sql
seeds/: dev.sql
