[package]
name = "api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
domain.workspace = true
infrastructure.workspace = true
shared.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
totp-rs.workspace = true
uuid.workspace = true
chrono.workspace = true
