[package]
name = "api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
infrastructure.workspace = true
shared.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hex.workspace = true
hmac.workspace = true
sha1.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
totp-rs.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
redis.workspace = true
thiserror.workspace = true
rand.workspace = true
sqlx.workspace = true
aws-sdk-s3.workspace = true
tokio-tungstenite = "0.24"
futures-util = "0.3"
dashmap = "6"
urlencoding.workspace = true
reqwest = { version = "0.12", features = ["json"] }
prometheus.workspace = true
parking_lot.workspace = true
