[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
shared.workspace = true
sqlx.workspace = true
redis.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
lettre.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ed25519-dalek.workspace = true
sha2.workspace = true
