[package]
name = "shared"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
config.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
sha2.workspace = true
hex.workspace = true
dotenvy.workspace = true
